...
                    model.showNext = false
                }
            }
            .background(.black)
            .accessibility(identifier: "LessonDetailsBody")
        }
        .accessibility(identifier: "LessonDetailsScrollView")
        .background(Color(.black))
        .if(lesson.fileExists() == false) { content in
            content.toolbar {
                    ToolbarItem(placement: .navigationBarTrailing){
                        Button {
                            if viewModel.isDownloading {
...
                                }
                                else{
                                    Image(systemName: "icloud.and.arrow.down")
                                    Text("Download")
                                }
                            }
                        }.accessibility(identifier: "LessonDetailsDownload")
                    }
                }
        }
        .environmentObject(model)
        .environmentObject(lesson)
        .alert("Internet is not available.\nTo view file offline, download the file when connected to internet.", isPresented: $viewModel.showNoInternetAlert) {
...
